kubernetes/manifests/ingress/homepage/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: homepage
  namespace: homepage
subsets:
  - addresses:
      - ip: 192.168.188.162
    ports:
      - name: http
        port: 3000
