kubernetes/manifests/ingress/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
