kubernetes/manifests/ingress/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`homepage.home.arpa`)
      kind: Rule
      services:
        - name: homepage
          port: 3000

  tls:
    secretName: homepage-home-arpa-tls
